--- a/src/main/resources/schema.sample
+++ b/src/main/resources/schema.sample
@@ -7,6 +7,7 @@ Hibernate:
         created_date timestamp(6) not null,
         modified_by integer not null,
         modified_date timestamp(6) not null,
+        ver bigint not null,
         email varchar(100) not null,
         name varchar(100) not null,
         password varchar(100) not null,
