--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,21 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	    <!-- WebJars -->
+	    <dependency>
+	        <groupId>org.webjars</groupId>
+	        <artifactId>bootstrap</artifactId>
+	        <version>5.3.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.webjars</groupId>
+	        <artifactId>jquery</artifactId>
+	        <version>3.7.0</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.webjars</groupId>
+	        <artifactId>webjars-locator-core</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<build>
