--- a/src/main/resources/schema.sample
+++ b/src/main/resources/schema.sample
@@ -9,6 +9,7 @@ Hibernate:
         modified_date timestamp(6) not null,
         ver bigint not null,
         email varchar(100) not null,
+        enabled boolean not null,
         name varchar(100) not null,
         password varchar(100) not null,
         primary key (id)
