--- a/src/main/resources/schema.sample
+++ b/src/main/resources/schema.sample
@@ -8,6 +8,7 @@ Hibernate:
         modified_by integer not null,
         modified_date timestamp(6) not null,
         email varchar(100) not null,
+        enabled boolean not null,
         name varchar(100) not null,
         password varchar(100) not null,
         primary key (id)
